# px-pi-agent-rust

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONFORMANCE.md  Cargo.toml  EXTENSIONS.md  FEATURE_PARITY.md  README.md
.beads/: beads.base.jsonl  issues.jsonl
.github/workflows/: bench.yml  ci.yml
benches/: extensions.rs  system.rs
docs/: EXTENSION_SAMPLE.md  TEST_COVERAGE_MATRIX.md  extension-sample.json  keybindings.md  releasing.md  windows.md
docs/schema/: extension_manifest.json
src/: agent.rs  auth.rs  autocomplete.rs  cli.rs  config.rs  error.rs  error_hints.rs  extension_dispatcher.rs  extensions.rs  extensions_js.rs  interactive.rs  keybindings.rs  lib.rs  main.rs  model.rs  package_manager.rs  provider.rs  resources.rs  rpc.rs  scheduler.rs  session.rs  session_index.rs  session_picker.rs  sse.rs  theme.rs  tools.rs  tui.rs  vcr.rs
src/connectors/: http.rs
src/http/: client.rs  sse.rs
src/providers/: anthropic.rs  azure.rs  gemini.rs  openai.rs
tests/: e2e_cli.rs  ext_conformance.rs  ext_conformance_artifacts.rs  extensions_manifest.rs  provider_error_paths.rs  rpc_mode.rs  rpc_protocol.rs  session_conformance.rs  session_picker.rs  tools_conformance.rs  tui_snapshot.rs  tui_state.rs
tests/common/: harness.rs  logging.rs  mod.rs
tests/conformance/: fixture_runner.rs
tests/conformance/fixtures/: cli_flags.json  read_tool.json
tests/snapshots/: ext_conformance_artifacts__compat_scanner_pinned_sample_ledger.snap  ext_conformance_artifacts__compat_scanner_unit_fixture_ordering.snap  tui_snapshot__tui_assistant_with_thinking.snap  tui_snapshot__tui_footer_with_usage.snap  tui_snapshot__tui_initial_state.snap  tui_snapshot__tui_input_multi_line.snap  tui_snapshot__tui_input_single_line.snap  tui_snapshot__tui_multi_turn_conversation.snap  tui_snapshot__tui_scrolled_viewport.snap  tui_snapshot__tui_single_assistant_message.snap  tui_snapshot__tui_single_user_message.snap  tui_snapshot__tui_status_message.snap  tui_snapshot__tui_streaming_text.snap  tui_snapshot__tui_streaming_thinking.snap  tui_snapshot__tui_system_message.snap  tui_snapshot__tui_tool_output_message.snap  tui_snapshot__tui_tool_running.snap  tui_snapshot__tui_wrapped_message.snap
