[package]
name = "pi"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "High-performance AI coding agent CLI - Rust port of Pi Agent"
license = "MIT"
repository = "https://github.com/Dicklesworthstone/pi_agent_rust"
readme = "README.md"
keywords = ["ai", "cli", "coding-agent", "llm", "anthropic"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "pi"
path = "src/lib.rs"

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"

# Async runtime
asupersync = { path = "../asupersync", default-features = false, features = ["tls-native-roots", "sqlite"] }
futures = "0.3"
async-trait = "0.1"

# URL parsing/building
url = "2"

# Signals
ctrlc = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Terminal output (rich_rust for beautiful TUI)
rich_rust = { path = "../rich_rust", features = ["full"] }
crossterm = "0.29"

# Interactive TUI (charmed_rust - bubbletea/lipgloss/bubbles/glamour)
bubbletea = { path = "../charmed_rust/crates/bubbletea" }
lipgloss = { path = "../charmed_rust/crates/lipgloss" }
bubbles = { path = "../charmed_rust/crates/bubbles" }
glamour = { path = "../charmed_rust/crates/glamour" }
unicode-width = "0.2"
textwrap = "0.16"
clipboard = { version = "0.5.0", optional = true }

# Filesystem
dirs = "6"
tempfile = "3"
fs4 = "0.13"
glob = "0.3"
ignore = "0.4"
sqlmodel-sqlite = { path = "../sqlmodel_rust/crates/sqlmodel-sqlite" }
sqlmodel-core = { path = "../sqlmodel_rust/crates/sqlmodel-core" }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
regex = "1"
unicode-normalization = "0.1"
similar = "2"
sysinfo = "0.36"

# Image processing (optional)
image = { version = "0.25", optional = true }

[build-dependencies]
vergen-gix = { version = "1", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
pretty_assertions = "1"
insta = { version = "1", features = ["filters"] }
tempfile = "3"
criterion = { version = "0.7", features = ["html_reports"] }
jsonschema = { version = "0.40.2", default-features = false }

[[bench]]
name = "tools"
harness = false

[features]
default = ["image-resize"]
image-resize = ["image"]
clipboard = ["dep:clipboard"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some common patterns
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
