[package]
name = "pi_agent_rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "High-performance AI coding agent CLI - Rust port of Pi Agent"
license = "MIT"
repository = "https://github.com/Dicklesworthstone/pi_agent_rust"
readme = "README.md"
keywords = ["ai", "cli", "coding-agent", "llm", "anthropic"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "pi"
path = "src/lib.rs"

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"

# Async runtime
asupersync = { version = "0.1.0", path = "../asupersync", default-features = false, features = ["tls-native-roots", "sqlite", "tracing-integration"] }
futures = "0.3"
async-trait = "0.1"

# URL parsing/building
url = "2"

# Signals
ctrlc = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Terminal output (rich_rust for beautiful TUI)
rich_rust = { version = "0.1.1", path = "../rich_rust", features = ["full"] }
crossterm = "0.29"

# Interactive TUI (charmed_rust - bubbletea/lipgloss/bubbles/glamour)
bubbletea = { package = "charmed-bubbletea", version = "0.1.0", path = "../charmed_rust/crates/bubbletea" }
lipgloss = { package = "charmed-lipgloss", version = "0.1.0", path = "../charmed_rust/crates/lipgloss" }
bubbles = { package = "charmed-bubbles", version = "0.1.0", path = "../charmed_rust/crates/bubbles" }
glamour = { package = "charmed-glamour", version = "0.1.0", path = "../charmed_rust/crates/glamour" }
unicode-width = "0.2"
textwrap = "0.16"
clipboard = { version = "0.5.0", optional = true }
arboard = { version = "3.6.1", optional = true }

# Filesystem
dirs = "6"
tempfile = "3"
fs4 = "0.13"
glob = "0.3"
ignore = "0.4"
sqlmodel-sqlite = { version = "0.1.0", path = "../sqlmodel_rust/crates/sqlmodel-sqlite" }
sqlmodel-core = { version = "0.1.0", path = "../sqlmodel_rust/crates/sqlmodel-core" }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
regex = "1"
unicode-normalization = "0.1"
similar = "2"
sysinfo = "0.36"
rquickjs = { version = "0.11", features = ["futures", "loader"] }
swc_common = "18.0.1"
swc_ecma_codegen = "23.0.0"
swc_ecma_ast = "20.0.1"
swc_ecma_parser = "33.0.1"
swc_ecma_transforms_base = "36.0.1"
swc_ecma_transforms_typescript = "40.0.0"
swc_ecma_visit = "20.0.0"
wasmtime = { version = "29.0", features = ["component-model"], optional = true }

# Image processing (optional)
image = { version = "0.25", optional = true }

[build-dependencies]
vergen-gix = { version = "1", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
pretty_assertions = "1"
insta = { version = "1", features = ["filters"] }
tempfile = "3"
asupersync = { version = "0.1.0", path = "../asupersync", default-features = false, features = ["test-internals"] }
criterion = { version = "0.7", features = ["html_reports"] }
jsonschema = { version = "0.40.2", default-features = false }
proptest = "1.6"

[[bench]]
name = "tools"
harness = false

[[bench]]
name = "extensions"
harness = false

[[bench]]
name = "system"
harness = false

[features]
default = ["image-resize", "clipboard"]
image-resize = ["image"]
clipboard = ["dep:clipboard", "dep:arboard"]
wasm-host = ["dep:wasmtime"]
sqlite-sessions = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some common patterns
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
